# kepub

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog.md  LICENSE  README.md
bench/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  demonovel-txt.txt  demonovel.cpp  demonovel.txt  esjzone.cpp  masiro.cpp  masiro.txt
test/data/: masiro.txt  梗角色转生太过头了！.txt  魅魔的我-old-style.epub
test/data/standard-addition-old-style/: content.opf  titlepage.xhtml
test/data/standard-addition-old-style/OEBPS/Text/: chapter001.xhtml  chapter005.xhtml  chapter007.xhtml  chapter008.xhtml  chapter013.xhtml  chapter015.xhtml  chapter018.xhtml  chapter021.xhtml  chapter024.xhtml  chapter025.xhtml  chapter026.xhtml  chapter030.xhtml  chapter031.xhtml  chapter035.xhtml  chapter036.xhtml  chapter037.xhtml  chapter039.xhtml  chapter042.xhtml  chapter043.xhtml  chapter046.xhtml  chapter047.xhtml  chapter048.xhtml  chapter051.xhtml  chapter052.xhtml  chapter053.xhtml  chapter054.xhtml  chapter055.xhtml  chapter060.xhtml  chapter061.xhtml  chapter062.xhtml  chapter066.xhtml  chapter067.xhtml  chapter070.xhtml  chapter071.xhtml  chapter073.xhtml  chapter074.xhtml  chapter079.xhtml  chapter083.xhtml  chapter084.xhtml  chapter087.xhtml  (+36 more)
test/data/standard-addition/OEBPS/: content.opf  toc.ncx
test/data/standard-addition/OEBPS/Text/: chapter001.xhtml  chapter002.xhtml  chapter004.xhtml  chapter005.xhtml  chapter006.xhtml  chapter007.xhtml  chapter008.xhtml  chapter009.xhtml  chapter010.xhtml  chapter011.xhtml  chapter012.xhtml  chapter013.xhtml  chapter014.xhtml  chapter015.xhtml  chapter017.xhtml  chapter018.xhtml  chapter019.xhtml  chapter021.xhtml  chapter022.xhtml  chapter023.xhtml  chapter025.xhtml  chapter026.xhtml  chapter028.xhtml  chapter029.xhtml  chapter030.xhtml  chapter031.xhtml  chapter032.xhtml  chapter033.xhtml  chapter034.xhtml  chapter035.xhtml  chapter036.xhtml  chapter038.xhtml  chapter040.xhtml  chapter041.xhtml  chapter042.xhtml  chapter044.xhtml  chapter046.xhtml  chapter047.xhtml  chapter048.xhtml  chapter049.xhtml  (+125 more)
test/data/standard-demonovel/OEBPS/: content.opf  toc.ncx
test/data/standard-demonovel/OEBPS/Styles/: style.css
test/data/standard-demonovel/OEBPS/Text/: chapter001.xhtml  chapter002.xhtml  chapter003.xhtml  chapter004.xhtml  chapter005.xhtml  chapter006.xhtml  chapter007.xhtml  chapter008.xhtml  chapter009.xhtml  chapter010.xhtml  chapter011.xhtml  chapter012.xhtml  chapter013.xhtml  chapter014.xhtml  chapter015.xhtml  chapter016.xhtml  chapter017.xhtml  chapter018.xhtml  chapter019.xhtml  chapter020.xhtml  chapter021.xhtml  chapter022.xhtml  chapter023.xhtml  chapter024.xhtml  chapter025.xhtml  chapter026.xhtml  chapter027.xhtml  chapter028.xhtml  chapter029.xhtml  chapter030.xhtml  chapter031.xhtml  chapter032.xhtml  chapter033.xhtml  chapter034.xhtml  chapter035.xhtml  chapter036.xhtml  chapter037.xhtml  introduction.xhtml
test/data/standard-esjzone/OEBPS/: content.opf  toc.ncx
test/data/standard-esjzone/OEBPS/Styles/: style.css
test/data/standard-esjzone/OEBPS/Text/: chapter001.xhtml  chapter002.xhtml  chapter003.xhtml  chapter006.xhtml  chapter007.xhtml  chapter010.xhtml  chapter011.xhtml  chapter012.xhtml  chapter013.xhtml  chapter014.xhtml  chapter015.xhtml  chapter016.xhtml  chapter019.xhtml  chapter020.xhtml  chapter021.xhtml  chapter022.xhtml  chapter023.xhtml  chapter024.xhtml  chapter025.xhtml  chapter026.xhtml  (+150 more)
test/data/standard-masiro/OEBPS/: content.opf  toc.ncx
test/extra_test/: CMakeLists.txt  standard.xhtml  梗角色轉生太過頭了！.txt  魅魔的我-old-style.epub  魅魔的我-old-style.txt
test/extra_test/addition/: CMakeLists.txt  魅魔的我.epub
test/extra_test/addition_volume/: CMakeLists.txt  魅魔的我.epub  魅魔的我.txt
test/extra_test/append_epub/: CMakeLists.txt  魅魔的我.epub
test/extra_test/append_epub_volume/: CMakeLists.txt  魅魔的我.epub
test/extra_test/ciweimao/: 100194379.txt  100219754.txt  CMakeLists.txt  standard.txt
test/extra_test/data/: standard-esjzone.txt  standard.xhtml  魅魔的我1.txt
test/extra_test/data/standard-addition-old-style/: content.opf  page_styles.css  toc.ncx
test/extra_test/demonovel/: CMakeLists.txt
test/extra_test/esjzone/: 1578022447.txt  1638940580.txt  CMakeLists.txt
test/extra_test/extract_epub/: CMakeLists.txt  梗角色转生太过头了！-standard.txt  梗角色转生太过头了！.epub  讨厌第四次的死属性魔法师.epub
test/extra_test/gen_epub/: CMakeLists.txt
test/extra_test/gen_epub_volume/: CMakeLists.txt
test/extra_test/gen_txt/: CMakeLists.txt  梗角色转生太过头了！-standard.txt  讨厌第四次的死属性魔法师-standard.txt
test/extra_test/kepub/: CMakeLists.txt  梗角色转生太过头了！.txt
test/extra_test/lightnovel/: 1082643.txt
test/extra_test/masiro/: 511.txt  CMakeLists.txt  梗角色转生太过头了！.txt
test/extra_test/sfacg/: 263060.txt  400179.txt  405436.txt  CMakeLists.txt
test/extra_test/standard-addition-old-style/: stylesheet.css  toc.ncx
test/extra_test/standard-addition/OEBPS/: toc.ncx
test/extra_test/standard-esjzone/OEBPS/: content.opf  toc.ncx
test/extra_test/standard-masiro/OEBPS/: content.opf  toc.ncx
test/extra_test/title/: CMakeLists.txt  ref.txt
test/extra_test/volume/: CMakeLists.txt  魅魔的我.txt
test/extra_test/xhtml/: CMakeLists.txt  standard.xhtml
test/unit_test/: CMakeLists.txt  encoding_test.cpp  epub.cpp  epub_test.cpp  html.cpp  trans.cpp  trans_test.cpp  util.cpp  util_test.cpp  version_test.cpp
tool/: CMakeLists.txt  addition.cpp  append_epub.cpp  ciweimao.cpp  demonovel.cpp  esjzone.cpp  extract_epub.cpp  gen_epub.cpp  json.cpp  json.h  kepub.cpp  lightnovel.cpp  masiro.cpp  sfacg.cpp  title.cpp  xhtml.cpp
tool/addition/: CMakeLists.txt  addition.cpp
tool/append_epub/: CMakeLists.txt
tool/ciweimao/: CMakeLists.txt  aes.cpp  aes.h  ciweimao.cpp  http.cpp  http.h  json.cpp  json.h
tool/esjzone/: CMakeLists.txt  esjzone.cpp  http.cpp  http.h
tool/extract_epub/: CMakeLists.txt
tool/gen_epub/: CMakeLists.txt  gen_epub.cpp
tool/gen_txt/: CMakeLists.txt  gen_txt.cpp
tool/kepub/: CMakeLists.txt  kepub.cpp
tool/sfacg/: CMakeLists.txt  http.cpp  http.h  json.cpp  json.h  sfacg.cpp
(+6272 files in other folders)
